# miri-study

./: .gitattributes  .gitignore  README.md  profiler-pros-cons.md  top_crates.json
.devcontainer/: Dockerfile  devcontainer.json
crates/cargo-geiger/: unsafe_report_base64.txt  unsafe_report_bitflags.txt  unsafe_report_cfg-if.txt  unsafe_report_getrandom-0.4.0.txt  unsafe_report_hashbrown.txt  unsafe_report_heck.txt  unsafe_report_indexmap.txt  unsafe_report_itertools.txt  unsafe_report_libc-1.0.0.txt  unsafe_report_log.txt  unsafe_report_memchr.txt  unsafe_report_proc-macro2.txt  unsafe_report_quote.txt  unsafe_report_rand-0.10.0.txt  unsafe_report_rand_chacha-0.10.0.txt  unsafe_report_rand_core-0.10.0-rc.txt  unsafe_report_regex-automata.txt  unsafe_report_regex-syntax.txt  unsafe_report_rustix.txt  unsafe_report_serde.txt  unsafe_report_serde_derive.txt  unsafe_report_socket2.txt  unsafe_report_syn.txt  unsafe_report_thiserror-impl.txt  unsafe_report_thiserror.txt  unsafe_report_unicode-ident.txt  unsafe_report_windows-sys.txt  unsafe_report_windows-targets.txt  unsafe_report_windows_x86_64_gnu.txt  unsafe_report_windows_x86_64_msvc.txt
crates/scripts/: analyze_unsafe.sh  crates_with_unsafe  download_crates.sh
profiling/: profiler-pros-cons.md  run-tool-on.sh  run_indiv_tests.py
profiling/analyze_dhat/: Cargo.toml  pie.ipynb
profiling/analyze_dhat/outputs/: getrandom-outputs_memory_stats.csv  libc-outputs_memory_stats.csv  socket2-outputs_memory_stats.csv
profiling/analyze_dhat/src/: callgrind.rs  dhat.rs  folded.rs  main.rs  metric.rs  unit.rs  utils.rs
(+208 files in other folders)
