[package]
name = "analyze_dhat"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.23", features = ["derive", "string"] }
csv = "1.4.0"
iter_tools = "0.24.0"
serde = { version = "1.0.216", features = ["alloc", "derive"] }
serde_json = { version = "1.0.133", features = ["alloc"] }
